--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,21 @@
 kotlin.code.style=official
+kotlin.incremental=true
+ksp.incremental=true
 
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
 
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+android.defaults.buildfeatures.buildconfig=false
+android.enableBuildConfigAsBytecode=true
+android.nonFinalResIds=true
 
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
